Fixed alignments on the endpoint request form pages.

--- a/web/scss/main.scss
+++ b/web/scss/main.scss
@@ -32,7 +32,7 @@
 }
 .breadcrumbContainer {
   .breadcrumb {
-    margin-bottom: 0px;
+    padding-left: 0px;
   }
 }
 
